--- a/src/components/NavbarStyles.css
+++ b/src/components/NavbarStyles.css
@@ -3,6 +3,15 @@
     justify-content: space-between;
     align-items: center;
     padding: 1rem;
+    position: fixed;
+    width: 100%;
+    height: 90px;
+    z-index: 10;
+}
+
+.header-bg{
+    background-color: rgba(0, 0, 0, 0.85);
+    transition: 0.5s;
 }
 
 .nav-menu{
@@ -17,7 +26,7 @@
     font-size: 1.2rem;
     font-weight: 500;
     text-decoration: none;
-    color: #333;
+    color: rgb(255, 255, 255);
 }
 
 .hamburger{
