--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@ body{
   background: black;
 }
 
-h1,h4,p,a{
+h1, h2, h3, h4, p, a{
   color: white;
   text-decoration: none;
 }
@@ -22,7 +22,7 @@ ul{
 }
 
 .btn {
-  padding: 12px 32 px;
+  padding: 12px 32px;
   font-size: 1rem;
   text-transform: uppercase;
   background: rgb(248, 217, 15);
